fix: app content overlapping sidenav (#4811)

--- a/frontend/src/container/AppLayout/AppLayout.styles.scss
+++ b/frontend/src/container/AppLayout/AppLayout.styles.scss
@@ -6,6 +6,7 @@
 	.app-content {
 		width: calc(100% - 64px);
 		overflow: auto;
+		z-index: 0;
 
 		.content-container {
 			position: relative;
